src/components/workspace/WorkSpace/WorkSpace.module.scss
.root {
  display: flex;
  height: 100vh;
  overflow: hidden;
  .sidebar {
    flex: 0 0 70px;
    width: 70px;
  }
  .splitHorizontal {
    display: flex;
    flex-direction: row;
    width: 100%;
    div[class*='gutter-horizontal'] {
      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
      cursor: col-resize;
      background-color: #141416;
    }
  }
  .splitVertical {
    display: flex;
    flex-direction: column;
    height: 100%;
    div[class*='gutter-vertical'] {
      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
      cursor: row-resize;
      background-color: #17171a;
    }
  }
  div[class*='gutter'] {
    z-index: 100;
    background-repeat: no-repeat;
    background-position: 50%;
    &:hover {
      background-color: var(--primary);
    }
  }
  .tree {
    padding-top: 0.5rem;
    // flex: 0 0 250px;
    // width: 250px;
    background-color: #141416;
    overflow-x: hidden !important;
    overflow-y: auto !important;
    :global(.onboarding-active) & {
      overflow: initial !important;
    }
    div[class*='ant-spin-nested-loading'] {
      height: 4rem;
    }
  }
  .workArea {
    width: calc(100% - 320px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }
  .heading {
    color: #ccc;
    text-align: center;
    display: block;
    font-size: 0.875rem;
    font-weight: 500;
    padding: 0.5rem 0;
  }
  .globalAction {
    color: #ccc;
    display: flex;
    justify-content: space-between;
    padding: 0.5rem;
    padding-left: 0.7rem;
    padding: 0.5rem 0.5rem 0 0.7rem;
    font-size: 0.875rem;
    // border-bottom: 1px solid var(--black-500);
    align-items: center;
    font-weight: 800;
    // margin-bottom: 0.8rem;

    svg {
      font-size: 1.2rem;
    }
    .visible {
      opacity: 1;
      pointer-events: all;
      display: flex;
      justify-content: flex-end;
    }
  }
  .testCaseArea {
    padding: 1rem;
    height: 100%;
  }
  .tabsWrapper {
    display: flex;
    align-items: center;
  }
}

